# gaussian-splatting-cuda

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  benchmark_mipnerf360.sh  full_eval.sh  imgui.ini  multiple_runs.py  run.sh  vcpkg.json  warnings.txt
densepoints/: CMakeLists.txt
densepoints/include/: adjacency_graph.h  dense_point_cloud.h  matcher.h  track_handler.h
densepoints/src/: adjacency_graph.cpp  dense_point_cloud.cpp  matcher.cpp  track_handler.cpp
fastgs/: CMakeLists.txt
fastgs/optimizer/include/: adam.h  adam_api.h  adam_kernels.cuh  optimizer_config.h
fastgs/optimizer/src/: adam.cu  adam_api.cu
fastgs/rasterization/: README.md
fastgs/rasterization/include/: backward.h  buffer_utils.h  forward.h  kernel_utils.cuh  kernels_backward.cuh  kernels_forward.cuh  rasterization_api.h  rasterization_config.h
fastgs/rasterization/src/: backward.cu  forward.cu  rasterization_api.cu
fastgs/utils/: helper_math.h  torch_utils.h  utils.h
gsplat/: Adam.cpp  Adam.h  AdamCUDA.cu  CMakeLists.txt  Cameras.cuh  Cameras.h  Common.h  Intersect.cpp  Intersect.h  IntersectTile.cu  Null.cpp  Null.h  NullCUDA.cu  Ops.h  Projection.cpp  Projection.h  ProjectionEWA3DGSFused.cu  ProjectionEWA3DGSPacked.cu  ProjectionEWASimple.cu  ProjectionUT3DGSFused.cu  QuatScaleToCovar.cpp  QuatScaleToCovar.h  QuatScaleToCovarCUDA.cu  QuatToRotmat.cpp  QuatToRotmat.h  QuatToRotmatCUDA.cu  Rasterization.cpp  Rasterization.h  RasterizeToIndices3DGS.cu  RasterizeToPixels3DGSBwd.cu  RasterizeToPixels3DGSFwd.cu  RasterizeToPixelsFromWorld3DGSBwd.cu  RasterizeToPixelsFromWorld3DGSFwd.cu  Relocation.cpp  Relocation.h  RelocationCUDA.cu  SphericalHarmonics.cpp  SphericalHarmonics.h  SphericalHarmonicsCUDA.cu  Utils.cuh
src/core/: CMakeLists.txt  application.cpp  argument_parser.cpp  camera.cpp  image_io.cpp  newton_optimizer.cpp  parameters.cpp  sogs.cpp  splat_data.cpp  tinyply.cpp
src/geometry/: CMakeLists.txt  bounding_box.cpp  euclidean_transform.cpp  euclidian_transform.cpp
src/loader/: CMakeLists.txt  cache_image_loader.cpp  cache_image_loader.hpp  filesystem_utils.hpp  loader.cpp  loader_interface.hpp  loader_queue.hpp  loader_registry.hpp  loader_service.cpp  loader_service.hpp  loader_types.hpp
src/loader/formats/: colmap.cpp  colmap.hpp  ply.cpp  ply.hpp  sogs.cpp  sogs.hpp  transforms.cpp  transforms.hpp
src/loader/loaders/: blender_loader.cpp  blender_loader.hpp  colmap_loader.cpp  colmap_loader.hpp  ply_loader.cpp  ply_loader.hpp  sogs_loader.cpp  sogs_loader.hpp
src/project/: CMakeLists.txt  project.cpp
src/rendering/: CMakeLists.txt  axes_renderer.cpp  axes_renderer.hpp  bbox_renderer.cpp  bbox_renderer.hpp  camera_frustum_renderer.cpp  camera_frustum_renderer.hpp  cuda_gl_interop.cpp  cuda_gl_interop.hpp  fast_rasterizer.cpp  fast_rasterizer.hpp  fast_rasterizer_autograd.cpp  fast_rasterizer_autograd.hpp  framebuffer.hpp  framebuffer_factory.cpp  framebuffer_factory.hpp  gl_resources.hpp  gl_state_guard.hpp  grid_renderer.cpp  grid_renderer.hpp  gs_rasterizer.cpp  gs_rasterizer.hpp  point_cloud_renderer.cpp  point_cloud_renderer.hpp  rendering_engine.cpp  rendering_engine_impl.cpp  rendering_engine_impl.hpp  rendering_error.hpp  rendering_pipeline.cpp  rendering_pipeline.hpp  screen_renderer.cpp  screen_renderer.hpp  shader.hpp  shader_manager.cpp  shader_manager.hpp  shader_paths.hpp  split_view_renderer.cpp  split_view_renderer.hpp  text_renderer.cpp  text_renderer.hpp  (+4 more)
src/rendering/cuda/: CMakeLists.txt
src/training/: CMakeLists.txt  dataloader.cpp  dataloader.hpp  dataset.hpp  memory_tracker.hpp  progress.hpp  trainer.cpp  trainer.hpp  training_setup.cpp  training_setup.hpp
src/training/components/: bilateral_grid.cpp  bilateral_grid.hpp  poseopt.cpp  poseopt.hpp  sparsity_optimizer.cpp  sparsity_optimizer.hpp
src/training/kernels/: bilateral_grid_backward.cu  bilateral_grid_forward.cu  bilateral_grid_tv.cu  ssim.cu
src/training/metrics/: metrics.cpp  metrics.hpp
src/training/optimizers/: fused_adam.cpp  fused_adam.hpp  scheduler.cpp  scheduler.hpp
src/training/rasterization/: fast_rasterizer.cpp  fast_rasterizer.hpp  fast_rasterizer_autograd.cpp  fast_rasterizer_autograd.hpp  projection_fast.hpp  rasterizer.cpp  rasterizer.hpp  rasterizer_autograd.cpp  rasterizer_autograd.hpp
src/training/strategies/: combined.cpp  combined.hpp  default_strategy.cpp  default_strategy.hpp  istrategy.hpp  mcmc.cpp  mcmc.hpp  strategy_utils.cpp  strategy_utils.hpp
src/visualizer/: CMakeLists.txt  camera_controller.cpp  cuda_gl_interop.cpp  gui_manager.cpp  input_handler.cpp  render_bounding_box.cpp  rendering_pipeline.cpp  scene.cpp  scene_manager.cpp  scene_panel.cpp  training_manager.cpp  viewer.cpp  visualizer.cpp  visualizer_impl.cpp  visualizer_impl.hpp  window_manager.cpp
src/visualizer/core/: command_processor.cpp  command_processor.hpp  data_loading_service.cpp  data_loading_service.hpp  main_loop.cpp  main_loop.hpp  viewer_state_manager.cpp  viewer_state_manager.hpp
src/visualizer/gui/: gui_manager.cpp  gui_manager.hpp  scene_panel.cpp  text_renderer.cpp  text_renderer.hpp  ui_context.hpp  ui_widgets.cpp  ui_widgets.hpp  viewport_gizmo.cpp  viewport_gizmo.hpp
src/visualizer/input/: camera_controller.cpp  camera_controller.hpp  input_controller.cpp  input_controller.hpp  input_handler.cpp  input_handler.hpp  input_manager.cpp  input_manager.hpp  input_priority.hpp  input_types.hpp
src/visualizer/internal/: resource_paths.hpp  viewer_impl.cpp  viewer_impl.hpp  viewer_service.cpp  viewer_service.hpp  viewport.hpp
src/visualizer/legacy/: detail.hpp  viewer.cpp
src/visualizer/rendering/: cuda_gl_interop.cpp  cuda_gl_interop.hpp  framebuffer.hpp  framerate_controller.cpp  framerate_controller.hpp  point_cloud_renderer.cpp  point_cloud_renderer.hpp  render_bounding_box.cpp  render_bounding_box.hpp  (+10 more)
taminggs/: CMakeLists.txt  adam.cu  adam.h  auxiliary.h  backward.cu  backward.h  config.h  forward.cu  forward.h  rasterize_points.cu  rasterize_points.h  rasterizer.h  rasterizer_impl.cu  rasterizer_impl.h
(+399 files in other folders)
